JumpScript/tests/baselines/reference/parserSkippedTokens16.errors.txt
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens16.jump(1,1): error TS2552: Cannot find name 'foo'. Did you mean 'Foo'?
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens16.jump(1,6): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens16.jump(1,8): error TS2304: Cannot find name 'Bar'.
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens16.jump(1,12): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens16.jump(2,22): error TS1127: Invalid character.
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens16.jump(3,3): error TS1109: Expression expected.
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens16.jump(6,5): error TS1138: Parameter declaration expected.
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens16.jump(8,14): error TS1109: Expression expected.


==== tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens16.jump (8 errors) ====
    foo(): Bar { }
    ~~~
!!! error TS2552: Cannot find name 'foo'. Did you mean 'Foo'?
         ~
!!! error TS1005: ';' expected.
           ~~~
!!! error TS2304: Cannot find name 'Bar'.
               ~
!!! error TS1005: ';' expected.
    function Foo      () #   { }
                         
!!! error TS1127: Invalid character.
    4+:5
      ~
!!! error TS1109: Expression expected.
    module M {
    function a(
        : T) { }
        ~
!!! error TS1138: Parameter declaration expected.
    }
    var x       =
                 
!!! error TS1109: Expression expected.